*2.69 RC1* Bisect Tool does not work after ctrl-z #36998

Closed
opened 2013-10-08 21:46:00 +02:00 by Jeff H · 9 comments

%%%--- Operating System, Graphics card ---
windows 7 64bit
quadro 2000M

- Blender version with error, and version that worked ---

2.69 RC1

- Short description of error ---

bisect tool fails after multiple actions followed by ctrl-z

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

go to edit mode on cube
perform at least 3 actions (select 3 vertex, scale, rotate, etc)
press ctrl-z
try and bisect

Happens every time for me%%%

%%%--- Operating System, Graphics card --- windows 7 64bit quadro 2000M - Blender version with error, and version that worked --- 2.69 RC1 - Short description of error --- bisect tool fails after multiple actions followed by ctrl-z - Steps for others to reproduce the error (preferably based on attached .blend file) --- go to edit mode on cube perform at least 3 actions (select 3 vertex, scale, rotate, etc) press ctrl-z try and bisect Happens every time for me%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Can't redo, please attach a blend file.%%%

%%%Can't redo, please attach a blend file.%%%

%%%What do you mean "doesn't work"? I've tried and it seems to work :)

Bisect cuts selected edges, so maybe you're confused by nothing happens in cases you're bisecting over the edges which are not selected?%%%

%%%What do you mean "doesn't work"? I've tried and it seems to work :) Bisect cuts selected edges, so maybe you're confused by nothing happens in cases you're bisecting over the edges which are not selected?%%%
Author

%%%Hi guys,

  • Sergey
    I was not aware that the mesh had to be selected for the tool to work. Everything works fine now. Sorry for the confusion.
    However, I was a bit mislead when I tried to bisect a high poly mesh when nothing was selected. Even though nothing was selected, after an attempted cut with the bisect tool, some vertex that were near the cut were selected, making it look as if the tool was trying to work. This made me think it was a bug.

Try this:
Sub divide a plane until you get about 60,000 vertex.
Make sure nothing is selected, and try and try the bisect tool.
As you are dragging the “cut-line” around, before the cut is confirmed, you may even see some vertex “flash” as they are briefly selected.
Confirm the cut and you should see some vertex along the cut are now selected, but no real cut is made.
This happens with lower poly meshes as well but the effect is more obvious with more vertex.

I also was able to confirm this on a Mac computer running version OS X 10.8.5
Not that this is a really bad bug, but like I said, it was misleading. Really great tool though!
Hope this helps
Thanks guys
%%%

%%%Hi guys, - Sergey I was not aware that the mesh had to be selected for the tool to work. Everything works fine now. Sorry for the confusion. However, I was a bit mislead when I tried to bisect a high poly mesh when nothing was selected. Even though nothing was selected, after an attempted cut with the bisect tool, some vertex that were near the cut were selected, making it look as if the tool was trying to work. This made me think it was a bug. Try this: Sub divide a plane until you get about 60,000 vertex. Make sure nothing is selected, and try and try the bisect tool. As you are dragging the “cut-line” around, before the cut is confirmed, you may even see some vertex “flash” as they are briefly selected. Confirm the cut and you should see some vertex along the cut are now selected, but no real cut is made. This happens with lower poly meshes as well but the effect is more obvious with more vertex. I also was able to confirm this on a Mac computer running version OS X 10.8.5 Not that this is a really bad bug, but like I said, it was misleading. Really great tool though! Hope this helps Thanks guys %%%
Author

%%%Here is a video demonstrating what i am talking about:
http://www.youtube.com/watch?v=t1k8j9hwvl0&feature=youtu.be%%%

%%%Here is a video demonstrating what i am talking about: http://www.youtube.com/watch?v=t1k8j9hwvl0&feature=youtu.be%%%

This issue was referenced by blender/blender-addons-contrib@bea9c3ab30

This issue was referenced by blender/blender-addons-contrib@bea9c3ab30b5946d84298bc6fd85d38ed4a6802f

This issue was referenced by bea9c3ab30

This issue was referenced by bea9c3ab30b5946d84298bc6fd85d38ed4a6802f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bea9c3ab30.

Closed by commit bea9c3ab30.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36998
No description provided.