Fix T36998: Bisect would operate on unselected vertices.